--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1397,6 +1397,8 @@ h6:hover {
   .card {
     -webkit-tap-highlight-color: rgba(255, 102, 0, 0.1);
   }
+
+  
 }
 
 @media (min-width: 577px) and (max-width: 768px) {
@@ -1411,4 +1413,11 @@ h6:hover {
   #umkm-container .col-md-6 {
     margin-bottom: 2rem;
   }
+}
+
+.back-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 999;
 }
